[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/3117-font(1).ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Dialog.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_top = 5
extra_spacing_char = 1
extra_spacing_space = -3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 260.0
margin_top = 469.0
margin_right = 1701.0
margin_bottom = 1053.0
color = Color( 0, 0, 0, 1 )

[node name="Dialog_back" type="ColorRect" parent="Background"]
margin_left = 45.0
margin_top = 53.0
margin_right = 1393.0
margin_bottom = 295.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Dialog" type="RichTextLabel" parent="Background/Dialog_back"]
margin_top = 6.0
margin_right = 1348.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 1 )

[node name="Option1" type="ColorRect" parent="Background"]
margin_left = 168.0
margin_top = 333.0
margin_right = 1259.0
margin_bottom = 409.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Dialog_option1" type="Label" parent="Background/Option1"]
margin_right = 1091.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )

[node name="Option2" type="ColorRect" parent="Background"]
margin_left = 168.0
margin_top = 452.0
margin_right = 1259.0
margin_bottom = 528.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="Dialog_option2" type="Label" parent="Background/Option2"]
margin_right = 1091.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
